--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,46 @@
   text-align: center;
 }
 
+.Login-form {
+  width: 100%;
+  margin: auto 100px;
+  padding: 32px;
+  font-weight: bold;
+  background-color: rgba(114, 121, 34, 0.9);
+  box-shadow: 2px 2px 10px 10px rgba(0, 0, 0, 0.1);
+}
+
+
+
+label {
+  display: block;
+  margin-bottom: 20px;
+}
+button {
+  max-width: 150px;
+  margin: 32px 0;
+  padding: 12px 20px;
+  border-style: none;
+  background-color: #14586b;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  font-size: 17px;
+  font-weight: 500;
+  color: #fff;
+  cursor: pointer;
+  outline: none;
+  -webkit-appearance: none;
+}
+button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed !important;
+}
+
+button + button {
+  margin-left: 0.5rem;
+}
+
+button.outline {
+  background-color: #eee;
+  border: 1px solid #aaa;
+  color: #555;
+}
