--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  background-color: #116466;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .Login-form {
