--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
-  
+  display: flex;
   text-align: center;
   background-color: #116466;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   
 }
 
